--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "bower install"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "pug": "^2.0.0-beta6"
+  },
+  "devDependencies": {
+    "bower": "^1.7.9"
   }
 }
