--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "git push heroku master",
     "postinstall": "bower install",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",    
+    "test": "echo \"Error: no test specified\" && exit 1"   
   },
   "keywords": [],
   "author": "",
