--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "deploy": "git push heroku master",
     "postinstall": "bower install",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"   
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bower": "^1.7.9",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "mongoose": "^4.6.0",
