--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "6"
   },
   "scripts": {
-    "db:seed": "node db/seed.js",
+    "db:seed": "node db/seeds.js",
     "deploy": "git push heroku master",
     "postinstall": "bower install",
     "start": "node server.js",
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^0.8.7",
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "chalk": "^1.1.3",
